--- a/SmartPeopleUI/pubspec.yaml
+++ b/SmartPeopleUI/pubspec.yaml
@@ -4,18 +4,11 @@ version: 0.0.1
 environment:
   sdk: '>=1.13.0 <2.0.0'
 dependencies:
-  angular2: 2.0.0-beta.13.1
+  angular2: 2.0.0-beta.10
   browser: ^0.10.0
+  angular2_material: "^2.0.0-beta.10"
   dart_to_js_script_rewriter: ^1.0.1
-  less_dart: ">=0.1.4 <0.2.0"
 transformers:
 - angular2:
     entry_points: web/main.dart
 - dart_to_js_script_rewriter
-- less_dart:
-    entry_point: web/less/ripples.less
-    output: web/css/ripples.css
-- less_dart:
-    entry_point: web/less/material-wfont.less
-    include_path: web/less
-    output: web/css/material-wfont.css
