--- a/SmartPeopleUI/pubspec.yaml
+++ b/SmartPeopleUI/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
   angular2: 2.0.0-beta.10
   browser: ^0.10.0
   angular2_material: "^2.0.0-beta.10"
+  less_dart: "^0.3.3"
   dart_to_js_script_rewriter: ^1.0.1
 transformers:
 - angular2:
