[SP-3] Added email validator directive and use it in login component

--- a/SmartPeopleUI/pubspec.yaml
+++ b/SmartPeopleUI/pubspec.yaml
@@ -15,5 +15,8 @@ transformers:
 - less_dart:
     build_mode: dart
 - angular2:
+    platform_directives:
+    - 'package:angular2/common.dart#CORE_DIRECTIVES'
+    - 'package:angular2/common.dart#FORM_DIRECTIVES'
     entry_points: web/main.dart
 #- dart_to_js_script_rewriter
