--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,12 @@ environment:
 dependencies:
   angular2: 2.0.0-beta.10
   browser: ^0.10.0
-  angular2_material: "^2.0.0-beta.10"
+  angular2_material: '^2.0.0-beta.10'
   dart_to_js_script_rewriter: ^1.0.1
 dev_dependencies:
-  less_dart: "^0.3.3"
+  less_dart: '^0.3.3'
   test: '>=0.12.0 <0.13.0'
+  mockito: '^0.11.0'
 transformers:
 - less_dart:
     build_mode: dart
