--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,11 @@ version: 0.0.1
 environment:
   sdk: '>=1.13.0 <2.0.0'
 dependencies:
-  angular2: 2.0.0-beta.10
-  browser: ^0.10.0
+  angular2: '2.0.0-beta.10'
+  browser: '^0.10.0'
   angular2_material: '^2.0.0-beta.10'
-  dart_to_js_script_rewriter: ^1.0.1
+  fp: '^0.4.3'
+  dart_to_js_script_rewriter: '^1.0.1'
 dev_dependencies:
   less_dart: '^0.3.3'
   test: '>=0.12.0 <0.13.0'
