--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   browser: '^0.10.0'
   angular2_material: '^2.0.0-beta.10'
   fp: '^0.4.3'
+  http: '^0.11.3+7'
   dart_to_js_script_rewriter: '^1.0.1'
 dev_dependencies:
   less_dart: '^0.3.3'
