--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 dev_dependencies:
   less_dart: '^0.3.3'
   test: '>=0.12.0 <0.13.0'
+  angular2_testing: '^2.0.0-beta.10'
   mockito: '^0.11.0'
   redstone: '^0.6.1'
 transformers:
