--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: dart
-sudo: false
 dart:
-  - stable
   - dev
+  - stable
+sudo: false
+script: pub run grinder travis
 with_content_shell: true
-
-before_script:
-  - chmod +x tool/travis.sh
-
-script:
-  - tool/travis.sh
+before_install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
