[SP-39] Setup dartium before every travis build, attempt 8

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,4 +31,6 @@ transformers:
     - 'package:angular2/common.dart#CORE_DIRECTIVES'
     - 'package:angular2/common.dart#FORM_DIRECTIVES'
     entry_points: web/main.dart
-#- dart_to_js_script_rewriter
+- dart_to_js_script_rewriter
+- test/pub_serve:
+      $include: test/index.dart
