--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,4 +33,4 @@ transformers:
     entry_points: web/main.dart
 - dart_to_js_script_rewriter
 - test/pub_serve:
-      $include: test/index.dart
+      $include: test/all_test.dart
