--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dart:
   - stable
 sudo: false
 script: pub run grinder travis
+with_content_shell: true
 before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
