--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ transformers:
     - 'package:angular2/common.dart#CORE_DIRECTIVES'
     - 'package:angular2/common.dart#FORM_DIRECTIVES'
     entry_points: web/main.dart
+#- test/pub_serve:
+#    - $include: test/all_test.dart
 - dart_to_js_script_rewriter
-- test/pub_serve:
-      $include: test/all_test.dart
+
