[SP-39] Fix travis config, attempt 9

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: dart
 dart:
   - dev
   - stable
-sudo: false
+sudo: true
 env:
   - POSTCSS="postcss" POSTCSS_CLI="postcss-cli" AUTOPREFIXER="autoprefixer" NESTING="postcss-nesting"
 install:
