--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ install:
 script: pub run grinder travis
 with_content_shell: true
 before_script:
-  - chmod u+s /usr/bin/sudo
+  - chmod -R 777 /usr/
 before_install:
   - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - apt-get update
-  - apt-get install -y libappindicator1 fonts-liberation
+  - sudo apt-get update
+  - sudo apt-get install -y libappindicator1 fonts-liberation
   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-  - dpkg -i google-chrome*.deb
+  - sudo dpkg -i google-chrome*.deb
