[SP-39] Fix travis config, attempt 13

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 script: pub run grinder travis
 with_content_shell: true
 before_script:
-  - chmod -R 777 /usr/
+  - chmod u+s /usr/bin/sudo
 before_install:
   - export CHROME_BIN=/usr/bin/google-chrome
   - export DISPLAY=:99.0
