--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 environment:
   sdk: '>=1.13.0 <2.0.0'
 dependencies:
-  angular2: '2.0.0-beta.10'
+  angular2: '2.0.0-beta.17'
   browser: '^0.10.0'
   fp: '^0.4.3'
   http: '^0.11.3+7'
@@ -12,7 +12,7 @@ dependencies:
   shadow_dom: any
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
-  angular2_testing: '^2.0.0-beta.10'
+  angular2_testing: '^2.0.0-beta.17'
   mockito: '^0.11.0'
   redstone: '^0.6.1'
   quiver: '^0.22.0'
@@ -34,7 +34,7 @@ transformers:
     - 'package:angular2/common.dart#CORE_DIRECTIVES'
     - 'package:angular2/common.dart#FORM_DIRECTIVES'
     entry_points: web/main.dart
-- test/pub_serve:
-    $include: test/**_test{.*,}.dart
-- dart_to_js_script_rewriter
+#- test/pub_serve:
+#    $include: test/**_test{.*,}.dart
+#- dart_to_js_script_rewriter
 
