--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dart_to_js_script_rewriter: '^1.0.1'
   shadow_dom: any
 dev_dependencies:
+  shelf: '^0.6.5+2'
   test: '>=0.12.0 <0.13.0'
   angular2_testing: '^2.0.0-beta.17'
   mockito: '^0.11.0'
