--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "postcss-fixes": "^1.4.0",
     "postcss-flexbugs-fixes": "^2.0.0",
     "postcss-nesting": "^2.3.1",
-    "postcss-sort-style-rules": "^0.2.0",
+    "postcss-sort-style-rules": "^0.2.0"
+  },
+  "dependencies": {
+    "dialog-polyfill": "^0.4.3"
   }
 }
