--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "cssnano": "^3.7.0",
+    "postcss-cli": "^2.5.2",
     "postcss-fixes": "^1.4.0",
     "postcss-flexbugs-fixes": "^2.0.0",
     "postcss-nesting": "^2.3.1",
     "postcss-sort-style-rules": "^0.2.0"
-  },
-  "dependencies": {
-    "dialog-polyfill": "^0.4.3"
   }
 }
