--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,5 +46,5 @@ transformers:
     entry_points: web/main.dart
 #- test/pub_serve:
 #    $include: test/**_test{.*,}.dart
-#- dart_to_js_script_rewriter
+- dart_to_js_script_rewriter
 
