--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ install:
   - travis_retry pub get
   - travis_retry nvm install node
   - travis_retry npm install
-
+addons:
+  firefox: latest
 before_script:
   - chmod +x tool/travis.sh
 
