[SP-39] Fix travis build, attempt 7

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ dart:
   - dev
   - stable
 
+before_install:
+  - export DISPLAY=:99.0
+
 install:
   - travis_retry pub get
   - travis_retry nvm install node
