--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: dart
 dart:
+  - dev
   - stable
 before_install:
-  - export DISPLAY=:99.0
+- export DISPLAY=:99.0
 install:
   - travis_retry pub get
   - travis_retry nvm install node
   - travis_retry npm install
+addons:
+  firefox: latest
 before_script:
   - chmod +x tool/travis.sh
 
