--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 language: dart
 dart:
   - stable
-  - "1.15.0"
 before_install:
   - export DISPLAY=:99.0
 install:
   - travis_retry pub get
   - travis_retry nvm install node
   - travis_retry npm install
-addons:
-  firefox: latest
 before_script:
-  - chmod +x tool/travis.sh
-
+  - chmod +x scripts/*.sh
 script:
-  - tool/travis.sh
+  - scripts/install.sh
+  - scripts/analyze.sh
+  - scripts/lint.sh
+  - scripts/tests.sh
