[SP-33] Fix build, attempt 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
   - travis_retry npm install
 before_script:
   - chmod +x scripts/**/*.sh
+  - ls scripts
   - ./scripts/build/install.sh
 script:
   - ./scripts/build/analyze.sh
