--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,10 @@ install:
   - travis_retry nvm install node
   - travis_retry npm install
 before_script:
-  - chmod +x scripts/**/*.sh
-  - ls scripts
-  - ./scripts/build/install.sh
+  - chmod +x scripts/travis/*.sh
+  - scripts/travis/install.sh
 script:
-  - ./scripts/build/analyze.sh
-  - ./scripts/build/lint.sh
-  - ./scripts/build/build.sh
-  - ./scripts/build/tests.sh
+  - scripts/travis/analyze.sh
+  - scripts/travis/lint.sh
+  - scripts/travis/build.sh
+  - scripts/travis/tests.sh
