--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,22 +18,22 @@ dev_dependencies:
   test: '>=0.12.0 <0.13.0'
   angular2_testing: '^2.0.0-beta.17'
   mockito: '^0.11.0'
-#  postcss_transformer:
-#    path: transformers/postcss
+  postcss_transformer:
+    path: transformers/postcss
 #  postcss_transformer: '^0.1.1'
   quiver: '^0.22.0'
 transformers:
-#- postcss_transformer:
-#    executable: ./node_modules/postcss-cli/bin/postcss
-#    arguments:
-#    - local-plugins: ''
-#    - use: autoprefixer
-#    - autoprefixer.browsers: Firefox 47, Safari 9, Chrome 52, IE 11
-#    - use: postcss-nesting
-#    - use: postcss-fixes
-#    - use: postcss-flexbugs-fixes
-#    - use: postcss-sort-style-rules
-#    - use: cssnano
+- postcss_transformer:
+    executable: ./node_modules/postcss-cli/bin/postcss
+    arguments:
+    - local-plugins: ''
+    - use: autoprefixer
+    - autoprefixer.browsers: Firefox 47, Safari 9, Chrome 52, IE 11
+    - use: postcss-nesting
+    - use: postcss-fixes
+    - use: postcss-flexbugs-fixes
+    - use: postcss-sort-style-rules
+    - use: cssnano
 #    - use: postcss-font-magician // Will be used later
 #    - use: postcss-assets // Will be used later
 - angular2:
