--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   angular2_rbi: ^0.0.9
   shelf: '^0.6.5+2'
   shelf_static: '0.2.4'
+  shelf_proxy: '0.1.0+4 '
   redstone: '^0.6.1'
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
