--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,10 @@ dependencies:
   angular2_rbi: ^0.0.9
   shelf: '^0.6.5+2'
   shelf_static: '0.2.4'
-  shelf_proxy: '0.1.0+4 '
+  shelf_proxy: '0.1.0+4'
   redstone: '^0.6.1'
+  postgresql: '0.3.3'
+  uuid: '0.5.1'
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
   angular2_testing: '^2.0.0-beta.17'
