[SP-132] Fixed scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
 *.idea
-web/packages/
-packages/
-build/
 .packages
 .pub
-pubspec.lock
-/node_modules
+lib/postcss/
+test/account-management/login/packages/
+test/account-management/packages/
+test/account-management/restore-access/packages/
+test/account-management/restore-access/validators/packages/
+test/account-management/sign-up/packages/
+test/account-management/sign-up/validators/packages/
+test/errors/packages/
+test/helpers/packages/
+test/packages/
+test/redux/packages/
+test/shared/action-creators/packages/
+test/shared/components/packages/
+test/shared/middleware/packages/
+test/shared/packages/
+test/shared/reducers/packages/
+test/shared/validators/packages/
+transformers/postcss/packages/
+transformers/postcss/web/packages/
+web/images/packages/
