[SP-140] Moved email validator to shared project

--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   dart_to_js_script_rewriter: '^1.0.1'
   shadow_dom: any
   angular2_rbi: ^0.0.9
-#  smartpeople_shared:
-#    path: ../shared
+  smartpeople_shared:
+    path: ../shared
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
   angular2_testing: '^2.0.0-beta.17'
@@ -23,7 +23,7 @@ dev_dependencies:
   quiver: '^0.22.0'
 transformers:
 - postcss_transformer:
-    executable: ./node_modules/postcss-cli/bin/postcss
+#    executable: ./node_modules/postcss-cli/bin/postcss
     arguments:
     - local-plugins: ''
     - use: autoprefixer
