--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   redstone: '^0.6.1'
   postgresql: '0.3.3'
   uuid: '0.5.1'
-#  smartpeople_shared:
-#    path: ../shared
+  smartpeople_shared:
+    path: ../shared
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
   mockito: '^0.11.0'
