--- a/shared/pubspec.yaml
+++ b/shared/pubspec.yaml
@@ -5,3 +5,6 @@ environment:
   sdk: '>=1.13.0 <2.0.0'
 dependencies:
   redstone: '^0.6.1'
+  redstone_mapper: '0.2.0'
+dev_dependencies:
+  test: '>=0.12.0 <0.13.0'
