[SP-140] Fix build, attempt 3

--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   shadow_dom: any
   angular2_rbi: ^0.0.9
   smartpeople_shared:
-    path: '../shared'
+    path: ./../shared
+
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
   angular2_testing: '^2.0.0-beta.17'
