--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -4,15 +4,14 @@ version: 0.0.1
 environment:
   sdk: '>=1.13.0 <2.0.0'
 dependencies:
-  angular2: '2.0.0-beta.17'
+  smartpeople_shared:
+    path: ./../shared
+  angular2: '^2.0.0-beta.17'
   browser: '^0.10.0'
   fp: '^0.4.3'
   http: '^0.11.3+7'
   dart_to_js_script_rewriter: '^1.0.1'
-  shadow_dom: any
-  angular2_rbi: ^0.0.9
-  smartpeople_shared:
-    path: ./../shared
+  angular2_rbi: '^0.0.9'
 
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
